[package]
name = "blockwatch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
ethbloom = "0.13.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "sqlite" ] }
svix-ksuid = { version = "0.6.0" }
serde_json = { version = "1.0", features = ["raw_value"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
reqwest = { version = "0.11.20", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3.28"
figment = { version = "0.10.11", features = ["json", "env"] }
ethers-core = "2.0.10"
